# ana-benchmarks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test_pyana.py
tasks/task_1/: task.cxx
tasks/task_2/: task.cxx
tasks/task_3/: task.cxx
tasks/task_4/: task.cxx
tasks/task_5/: task.cxx
tasks/task_6/: task.cxx
tasks/task_7/: task.cxx
tasks/task_8/: task.cxx
